--- a/App_Store_Analysis.ipynb
+++ b/App_Store_Analysis.ipynb
@@ -22,6 +22,7 @@
     "colab": {
       "name": "App_Store_Analysis.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
@@ -70,7 +71,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QZJGkX5GLfzW",
-        "outputId": "40fe9824-0b02-4bbb-8099-2157e6220422"
+        "outputId": "ff526733-437f-4418-9930-e5ffd0b080c3"
       },
       "source": [
         "# Mount Google.\r\n",
@@ -110,7 +111,7 @@
         "print(android[1])"
       ],
       "id": "QZJGkX5GLfzW",
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +150,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IRR19dhtQ8SB",
-        "outputId": "94a4b81d-c9fc-4be7-f7af-5466b2540e2f"
+        "outputId": "42686954-8a2f-46aa-dbb3-63ac57ffd275"
       },
       "source": [
         "# Take data set, start and end point of slice, and count columns as a parameter\r\n",
@@ -168,7 +169,7 @@
         "explore_data(android, 0, 3, True)"
       ],
       "id": "IRR19dhtQ8SB",
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,7 +209,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JNprGcC5pE4Q"
+        "id": "JNprGcC5pE4Q",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "61a0787f-75c6-4014-c191-fd18dbd3bbf0"
       },
       "source": [
         "### TEST LIST OF LISTS ###\r\n",
@@ -229,11 +234,22 @@
         "    print(\"No action taken\")\r\n",
         "    #return data_set #use for testing.\r\n",
         "\r\n",
-        "#del_row(test_list_of_list,1)\r\n"
+        "del_row(android,10472)\r\n"
       ],
       "id": "JNprGcC5pE4Q",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "This is row  10472\n",
+            "['Life Made WI-Fi Touchscreen Photo Frame', '1.9', '19', '3.0M', '1,000+', 'Free', '0', 'Everyone', '', 'February 11, 2018', '1.0.19', '4.0 and up']\n",
+            "Delete this row? [y/n]y\n",
+            "I have deleted row 10472\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -250,14 +266,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "h-KUgWQms7A9"
+        "id": "h-KUgWQms7A9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9bc67f86-e7ed-43e7-c833-0850ababf725"
       },
       "source": [
-        "#del_row(android, 10472)"
+        "del_row(android, 10472)"
       ],
       "id": "h-KUgWQms7A9",
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "This is row  10472\n",
+            "['Life Made WI-Fi Touchscreen Photo Frame', '1.9', '19', '3.0M', '1,000+', 'Free', '0', 'Everyone', '', 'February 11, 2018', '1.0.19', '4.0 and up']\n",
+            "Delete this row? [y/n]y\n",
+            "I have deleted row 10472\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -265,9 +296,7 @@
         "id": "hpQdDegUt1Pr"
       },
       "source": [
-        "The row was successfully deleted. Function commented out so it doesn't delete the next row by accident.\r\n",
-        "\r\n",
-        "## Duplicate Data Points\r\n",
+        "### Duplicate Data Points\r\n",
         "Different versions of different apps, as well as updates, re-releases and scraping errors mean there may well be duplicate data points.\r\n",
         "\r\n",
         "Analysis and visualisation will be helped by ensuring each app only occurs once in the data set.\r\n",
@@ -286,16 +315,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "23_VdZIouhNQ",
-        "outputId": "e78d1218-16a1-4307-adf0-1ac7cae47b67"
+        "outputId": "e86912b9-5114-4a9a-a155-024775e4b747"
       },
       "source": [
-        "### TEST LIST OF LISTS ###\r\n",
-        "#test_col = [\"col 0\", \"col 1\", \"col 2\", \"col 3\"]\r\n",
-        "#test_row1 = [\"row 1\", \"row 1\", \"row 1\", \"row 1\"]\r\n",
-        "#test_row2 = [\"row 2\", \"row 2\", \"row 2\", \"row 2\"]\r\n",
-        "#test_row3 = [\"row 2\", \"row 2\", \"row 2\", \"row 2\"]\r\n",
-        "#test = [test_col, test_row1, test_row2, test_row3]\r\n",
-        "\r\n",
         "def find_dup(dataset):\r\n",
         "  duplicates = []\r\n",
         "  uniques = []\r\n",
@@ -319,7 +341,7 @@
         "\r\n"
       ],
       "id": "23_VdZIouhNQ",
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,29 +362,205 @@
       },
       "source": [
         "### Delete Duplicates\r\n",
-        "Now we know they are there, we need to delete them."
+        "Now we know they are there, we need to delete them.\r\n",
+        "\r\n",
+        "We will use two functions:\r\n",
+        "* **fill_dict**: Creates a dictionary, where each dictionary key is a unique app name and the corresponding dictionary value is the highest number of reviews of that app.\r\n",
+        "* **fill_new_dataset**: Use the information stored in the dictionary and create a new data set using the dictionary as an index."
       ],
       "id": "yxody4mVzNC7"
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_AMiVfjTzoyR"
+        "id": "_AMiVfjTzoyR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5a53acbd-d91e-4e2c-b04d-bcf1556e5957"
       },
       "source": [
-        "### TEST LIST OF LISTS ###\r\n",
-        "#test_col = [\"col 0\", \"col 1\", \"col 2\", \"col 3\"]\r\n",
-        "#test_row1 = [\"row 1\", \"row 1\", \"row 1\", \"row 1\"]\r\n",
-        "#test_row2 = [\"row 2\", \"row 2\", \"row 2\", \"row 2\"]\r\n",
-        "#test_row3 = [\"row 2\", \"row 2\", \"row 2\", \"row 2\"]\r\n",
-        "#test = [test_col, test_row1, test_row2, test_row3]\r\n",
         "\r\n",
-        "def del_dup(dataset):\r\n",
-        "  "
+        "def fill_dict(dataset, name, review):\r\n",
+        "  u_dict = {}\r\n",
+        "  for row in dataset:\r\n",
+        "    app_name = row[name]\r\n",
+        "    app_review = float(row[review])\r\n",
+        "         \r\n",
+        "    # If app not in u_dict then add it.\r\n",
+        "    if (app_name not in u_dict):\r\n",
+        "      u_dict[app_name] = app_review\r\n",
+        "    # If app is in u_dict and higher review, replace it\r\n",
+        "    elif (app_name in u_dict) and (app_review > u_dict.get(app_name)):\r\n",
+        "      u_dict[app_name] = app_review\r\n",
+        "  print(\"New unique dictionary contains:\", len(u_dict), \"keys with values.\")\r\n",
+        "  return u_dict\r\n",
+        "\r\n",
+        "fill_dict(android, 0, 3)\r\n",
+        "print(\"\\n\")\r\n"
       ],
       "id": "_AMiVfjTzoyR",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "New unique dictionary contains: 9659 keys with values.\n",
+            "\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MXIrxKj5fyCJ",
+        "outputId": "bad6189e-6a91-4c12-9d72-8e99130d5f5b"
+      },
+      "source": [
+        "# Global scope\r\n",
+        "clean_android = []\r\n",
+        "clean_names = []\r\n",
+        "\r\n",
+        "def fill_new_dataset(index_dict, dataset):\r\n",
+        "  # Loop through the raw dataset.\r\n",
+        "  for row in dataset:\r\n",
+        "    app_name = row[0] # Isolate the name for checking.\r\n",
+        "    n_reviews = float(row[3])\r\n",
+        "    # Attempt to match the number of reviews against the index dictionary returned from the fill_dict function.\r\n",
+        "    # n_reviews is unique in both data sets so we take the high review value we found.\r\n",
+        "    # Check if name has not been processed already.\r\n",
+        "    if (index_dict[app_name] == n_reviews) and (app_name not in clean_names):\r\n",
+        "      clean_android.append(row) # Copy to new clean dataset\r\n",
+        "      clean_names.append(app_name) # Audit the name to make sure we don't have it already.\r\n",
+        "  print(\"New unique dataset contains:\", len(clean_android), \"rows of data.\")\r\n",
+        "  return clean_android\r\n",
+        "\r\n",
+        "fill_new_dataset(fill_dict(android, 0, 3), android)\r\n",
+        "print(\"\\n\")\r\n",
+        "print(\"Here's a couple of rows of the clean data_set:\")\r\n",
+        "explore_data(clean_android, 5, 7, True)\r\n",
+        "\r\n"
+      ],
+      "id": "MXIrxKj5fyCJ",
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "New unique dictionary contains: 9659 keys with values.\n",
+            "New unique dataset contains: 9659 rows of data.\n",
+            "\n",
+            "\n",
+            "Here's a couple of rows of the clean data_set:\n",
+            "['Smoke Effect Photo Maker - Smoke Editor', 'ART_AND_DESIGN', '3.8', '178', '19M', '50,000+', 'Free', '0', 'Everyone', 'Art & Design', 'April 26, 2018', '1.1', '4.0.3 and up']\n",
+            "\n",
+            "\n",
+            "['Infinite Painter', 'ART_AND_DESIGN', '4.1', '36815', '29M', '1,000,000+', 'Free', '0', 'Everyone', 'Art & Design', 'June 14, 2018', '6.1.61.1', '4.2 and up']\n",
+            "\n",
+            "\n",
+            "Number of rows: 9659\n",
+            "Number of columns: 13\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iXGO08Fmt47K"
+      },
+      "source": [
+        "## Non-English Apps\r\n",
+        "Removing non-English apps is important because the company develops English language apps so we don't want to analyse those from other countries.\r\n",
+        "\r\n",
+        "### Finding Non-English Apps\r\n",
+        "We will use the ord(string) to indentity any non-English character by its ascii value (over 127).\r\n",
+        "\r\n",
+        "3 non-English characters is enough fidelity for our needs, though some may get through.\r\n",
+        "\r\n",
+        "Two nested for loops to go through the dataset row by row, and then the app name char by char."
+      ],
+      "id": "iXGO08Fmt47K"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XZvieDdWuaA5",
+        "outputId": "acd235e4-c504-4ef9-cccd-265f2ce1c785"
+      },
+      "source": [
+        "# iOS and Android datasets have app names in different columns, so we need to \r\n",
+        "# specify which column to look at as a parameter.\r\n",
+        "def get_english(dataset, name_col):\r\n",
+        "  non_english_names = [] # Two lists so we can check we have them all.\r\n",
+        "  english_names = []\r\n",
+        "  non_english_chars = 0\r\n",
+        "  print(\"Total Rows:\",len(dataset))\r\n",
+        "  for row in dataset: # Loop through the data set.\r\n",
+        "    non_english_chars = 0\r\n",
+        "    name = row[name_col]\r\n",
+        "    for char in name: # Loop through each app name in each row.\r\n",
+        "        if ord(char) > 127:\r\n",
+        "          non_english_chars += 1 # Increment the counter of non-Eng chars.\r\n",
+        "    if non_english_chars > 3:\r\n",
+        "      non_english_names.append(row) # Append to the discard pile if non-Eng.\r\n",
+        "    else:\r\n",
+        "      english_names.append(row) # Append to the keep pile if Eng.\r\n",
+        "  # Quality control. \r\n",
+        "  print(\"Apps named in Non-English:\", len(non_english_names))\r\n",
+        "  print(\"Apps named in English:\", len(english_names))\r\n",
+        "  print(\"Checksum:\", len(non_english_names)+len(english_names))\r\n",
+        "  return english_names\r\n",
+        "\r\n",
+        "\r\n",
+        "eng_android = get_english(clean_android, 0)\r\n",
+        "print(\"Android data set now has\", len(eng_android), \"rows.\")\r\n",
+        "print(\"\\n\")\r\n",
+        "eng_ios = get_english(ios, 1)\r\n",
+        "print(\"iOS data set now has\", len(eng_ios), \"rows.\")\r\n"
+      ],
+      "id": "XZvieDdWuaA5",
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Total Rows: 9659\n",
+            "Apps named in Non-English: 45\n",
+            "Apps named in English: 9614\n",
+            "Checksum: 9659\n",
+            "Android data set now has 9614 rows.\n",
+            "\n",
+            "\n",
+            "Total Rows: 7197\n",
+            "Apps named in Non-English: 1014\n",
+            "Apps named in English: 6183\n",
+            "Checksum: 7197\n",
+            "iOS data set now has 6183 rows.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y4bPPrfMTfdB"
+      },
+      "source": [
+        ""
+      ],
+      "id": "Y4bPPrfMTfdB"
     }
   ]
 }
