--- a/App_Store_Analysis.ipynb
+++ b/App_Store_Analysis.ipynb
@@ -477,15 +477,14 @@
         "id": "iXGO08Fmt47K"
       },
       "source": [
-        "## Non-English Apps\r\n",
+        "### Non-English Apps\r\n",
         "Removing non-English apps is important because the company develops English language apps so we don't want to analyse those from other countries.\r\n",
         "\r\n",
-        "### Finding Non-English Apps\r\n",
         "We will use the ord(string) to indentity any non-English character by its ascii value (over 127).\r\n",
         "\r\n",
         "3 non-English characters is enough fidelity for our needs, though some may get through.\r\n",
         "\r\n",
-        "Two nested for loops to go through the dataset row by row, and then the app name char by char."
+        "And so we filter with two nested for loops: one to go through the dataset row by row, and inside that one to cycle through the app name char by char."
       ],
       "id": "iXGO08Fmt47K"
     },
