--- a/App_Store_Analysis.ipynb
+++ b/App_Store_Analysis.ipynb
@@ -495,7 +495,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XZvieDdWuaA5",
-        "outputId": "acd235e4-c504-4ef9-cccd-265f2ce1c785"
+        "outputId": "5de0b22c-298b-4fd3-c314-fbc9978692c3"
       },
       "source": [
         "# iOS and Android datasets have app names in different columns, so we need to \r\n",
@@ -523,13 +523,13 @@
         "\r\n",
         "\r\n",
         "eng_android = get_english(clean_android, 0)\r\n",
-        "print(\"Android data set now has\", len(eng_android), \"rows.\")\r\n",
+        "print(\"Android data set now has\", len(eng_android), \"rows and is called eng_android.\")\r\n",
         "print(\"\\n\")\r\n",
         "eng_ios = get_english(ios, 1)\r\n",
-        "print(\"iOS data set now has\", len(eng_ios), \"rows.\")\r\n"
+        "print(\"iOS data set now has\", len(eng_ios), \"rows and is called eng_ios.\")\r\n"
       ],
       "id": "XZvieDdWuaA5",
-      "execution_count": 25,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -538,14 +538,14 @@
             "Apps named in Non-English: 45\n",
             "Apps named in English: 9614\n",
             "Checksum: 9659\n",
-            "Android data set now has 9614 rows.\n",
+            "Android data set now has 9614 rows and is called eng_android.\n",
             "\n",
             "\n",
             "Total Rows: 7197\n",
             "Apps named in Non-English: 1014\n",
             "Apps named in English: 6183\n",
             "Checksum: 7197\n",
-            "iOS data set now has 6183 rows.\n"
+            "iOS data set now has 6183 rows and is called eng_ios.\n"
           ],
           "name": "stdout"
         }
@@ -557,9 +557,142 @@
         "id": "Y4bPPrfMTfdB"
       },
       "source": [
-        ""
+        "## Part 3 - Free Apps\r\n",
+        "The company only builds free apps, so there is no point in analysing paid for apps.\r\n",
+        "\r\n",
+        "Both datasets now need to be filtered again - this time to keep only free apps.\r\n",
+        "\r\n"
       ],
       "id": "Y4bPPrfMTfdB"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "po-adH0-ZiNs",
+        "outputId": "8461c651-ebbc-40f4-e187-29098c183a8a"
+      },
+      "source": [
+        "print(ios_header)\r\n",
+        "print(android_header)\r\n",
+        "print(\"\\n\")\r\n",
+        "print(eng_ios[0])\r\n",
+        "print(eng_android[0])"
+      ],
+      "id": "po-adH0-ZiNs",
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['id', 'track_name', 'size_bytes', 'currency', 'price', 'rating_count_tot', 'rating_count_ver', 'user_rating', 'user_rating_ver', 'ver', 'cont_rating', 'prime_genre', 'sup_devices.num', 'ipadSc_urls.num', 'lang.num', 'vpp_lic']\n",
+            "['App', 'Category', 'Rating', 'Reviews', 'Size', 'Installs', 'Type', 'Price', 'Content Rating', 'Genres', 'Last Updated', 'Current Ver', 'Android Ver']\n",
+            "\n",
+            "\n",
+            "['284882215', 'Facebook', '389879808', 'USD', '0.0', '2974676', '212', '3.5', '3.5', '95.0', '4+', 'Social Networking', '37', '1', '29', '1']\n",
+            "['Photo Editor & Candy Camera & Grid & ScrapBook', 'ART_AND_DESIGN', '4.1', '159', '19M', '10,000+', 'Free', '0', 'Everyone', 'Art & Design', 'January 7, 2018', '1.0.0', '4.0.3 and up']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5lvtThKuZtnr"
+      },
+      "source": [
+        "We need to look at:\r\n",
+        "- Column index **4** in the **eng_ios** dataset\r\n",
+        "- Column index **6** in the **eng_android** dataset\r\n",
+        "\r\n",
+        "The function logic is essentially the same as get_english and will result in two new datasets: **free_eng_ios** and **free_eng_android**.\r\n",
+        "\r\n",
+        "Criteria for the filter are different in each dataset:\r\n",
+        "- iOS: type is float equal to 0.\r\n",
+        "- Android: type is string equal to 'Free'.\r\n",
+        "\r\n",
+        "For simplicity, we'll use two functions:\r\n",
+        "- get_free_ios()\r\n",
+        "- get_free_android()"
+      ],
+      "id": "5lvtThKuZtnr"
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PtFBArcxaMwx",
+        "outputId": "372cd305-7891-4a42-bb1b-07ba7eeba2b6"
+      },
+      "source": [
+        "def get_free_ios(dataset):\r\n",
+        "  paid = []\r\n",
+        "  free = []\r\n",
+        "  for app in dataset:\r\n",
+        "    price = app[4]\r\n",
+        "    if float(price) > 0.0:\r\n",
+        "      paid.append(app)\r\n",
+        "    else:\r\n",
+        "      free.append(app)\r\n",
+        "  print(\"Total apps:\", len(dataset))\r\n",
+        "  print(\"Paid apps:\", len(paid))\r\n",
+        "  print(\"Free apps:\", len(free))\r\n",
+        "  print(\"Checksum:\", len(paid) + len(free))\r\n",
+        "  return free\r\n",
+        "\r\n",
+        "\r\n",
+        "def get_free_android(dataset):\r\n",
+        "  paid = []\r\n",
+        "  free = []\r\n",
+        "  for app in dataset:\r\n",
+        "    price = app[6]\r\n",
+        "    if price == \"Paid\":\r\n",
+        "      paid.append(app)\r\n",
+        "    else:\r\n",
+        "      free.append(app)\r\n",
+        "  print(\"Total apps:\", len(dataset))\r\n",
+        "  print(\"Paid apps:\", len(paid))\r\n",
+        "  print(\"Free apps:\", len(free))\r\n",
+        "  print(\"Checksum:\", len(paid) + len(free))\r\n",
+        "  return free\r\n",
+        "\r\n",
+        "free_eng_android = get_free_android(eng_android)\r\n",
+        "print(\"Free Android apps:\", len(free_eng_android))\r\n",
+        "print(\"\\n\")\r\n",
+        "free_eng_ios = get_free_ios(eng_ios)\r\n",
+        "print(\"Free iOS apps:\", len(free_eng_ios))\r\n",
+        "print(\"\\n\")\r\n",
+        "\r\n"
+      ],
+      "id": "PtFBArcxaMwx",
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Total apps: 9614\n",
+            "Paid apps: 750\n",
+            "Free apps: 8864\n",
+            "Checksum: 9614\n",
+            "Free Android apps: 8864\n",
+            "\n",
+            "\n",
+            "Total apps: 6183\n",
+            "Paid apps: 2961\n",
+            "Free apps: 3222\n",
+            "Checksum: 6183\n",
+            "Free iOS apps: 3222\n",
+            "\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
