--- a/App_Store_Analysis.ipynb
+++ b/App_Store_Analysis.ipynb
@@ -71,7 +71,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QZJGkX5GLfzW",
-        "outputId": "c265e6a0-9edf-4400-e5fe-e3184e60b838"
+        "outputId": "8887f277-1636-414c-e43e-0e3bce861802"
       },
       "source": [
         "# Mount Google.\r\n",
@@ -113,7 +113,7 @@
         "print(\"\\n\")"
       ],
       "id": "QZJGkX5GLfzW",
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +156,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IRR19dhtQ8SB",
-        "outputId": "05effdbb-1393-4e33-b1b7-46d835dfa934"
+        "outputId": "ae15ea71-4a14-4438-cd90-772121e1d4b3"
       },
       "source": [
         "# Take data set, start and end point of slice, and count columns as a parameter\r\n",
@@ -175,7 +175,7 @@
         "explore_data(android, 0, 3, True)"
       ],
       "id": "IRR19dhtQ8SB",
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -231,7 +231,7 @@
         "    #return data_set #use for testing.\r\n"
       ],
       "id": "JNprGcC5pE4Q",
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -253,13 +253,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "32504ceb-8a8c-4ee5-b435-a2d606ddef3c"
+        "outputId": "7b7e302e-0ec5-4387-d26e-43f8709e7775"
       },
       "source": [
         "del_row(android,10472)"
       ],
       "id": "-GM56J9vB6wj",
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -298,7 +298,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "23_VdZIouhNQ",
-        "outputId": "fa4d9f80-4f9f-48d9-b77d-44aa286ba7af"
+        "outputId": "2aa9e9d2-5307-49af-db68-9ba55bf06a65"
       },
       "source": [
         "def find_dup(dataset):\r\n",
@@ -324,7 +324,7 @@
         "\r\n"
       ],
       "id": "23_VdZIouhNQ",
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,7 +360,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "131fd3c6-9482-4d76-b1af-abd7f72f0730"
+        "outputId": "e3bcb4c3-f423-4de0-e6d5-a998358c582e"
       },
       "source": [
         "\r\n",
@@ -383,7 +383,7 @@
         "print(\"\\n\")\r\n"
       ],
       "id": "_AMiVfjTzoyR",
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -403,7 +403,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MXIrxKj5fyCJ",
-        "outputId": "6a1252e2-fe2b-4fee-b88d-56e2465cbce8"
+        "outputId": "c7c4f5fb-f8f4-4367-b733-771b88f6c0b5"
       },
       "source": [
         "# Global scope\r\n",
@@ -431,7 +431,7 @@
         "\r\n"
       ],
       "id": "MXIrxKj5fyCJ",
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -478,7 +478,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XZvieDdWuaA5",
-        "outputId": "8330a7de-3c2c-455c-8a84-10c919cc031d"
+        "outputId": "895e74d4-0a56-4e62-95e7-c571ea936be8"
       },
       "source": [
         "# iOS and Android datasets have app names in different columns, so we need to \r\n",
@@ -512,7 +512,7 @@
         "print(\"iOS data set now has\", len(eng_ios), \"rows and is called eng_ios.\")\r\n"
       ],
       "id": "XZvieDdWuaA5",
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -555,7 +555,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "po-adH0-ZiNs",
-        "outputId": "2e40fca6-1003-42ed-f584-1309b7133d16"
+        "outputId": "ac3c7556-723d-444b-d7b1-de4ef4ddfa3a"
       },
       "source": [
         "print(ios_header)\r\n",
@@ -565,7 +565,7 @@
         "print(eng_android[0])"
       ],
       "id": "po-adH0-ZiNs",
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -610,7 +610,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PtFBArcxaMwx",
-        "outputId": "8f4e84ad-3b35-4c6b-db92-444bcd4d6ac6"
+        "outputId": "5cff01fb-e26e-40f2-e7fe-183859edd0aa"
       },
       "source": [
         "def get_free_ios(dataset):\r\n",
@@ -653,7 +653,7 @@
         "\r\n"
       ],
       "id": "PtFBArcxaMwx",
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -707,7 +707,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6mYQCHVWjp2X",
-        "outputId": "b1f65d39-db98-4600-d48f-1a73d12fd537"
+        "outputId": "bc66c05d-f083-490b-eaeb-0cb9d3dff460"
       },
       "source": [
         "def type_freq(dataset, column):\r\n",
@@ -737,7 +737,7 @@
         "print(ios_genre_dict)"
       ],
       "id": "6mYQCHVWjp2X",
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -800,7 +800,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "754645e5-4690-4229-f130-01fbc5feae81"
+        "outputId": "e6623eec-07a1-4eaf-eaaf-9e42c10baf17"
       },
       "source": [
         "\r\n",
@@ -822,7 +822,7 @@
         "print(get_key(ios_genre_dict, 106))"
       ],
       "id": "kxcDt9AKoaE7",
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -849,7 +849,9 @@
       },
       "source": [
         "#### Function sort_dict\r\n",
-        "This is the function that sorts a dictionary in ascending or descendning order using the built-in sorted() function."
+        "This is the function that sorts a dictionary in ascending or descendning order using the built-in sorted() function.\r\n",
+        "\r\n",
+        "The function can return raw numbers or percentages."
       ],
       "id": "WNO4NoFxOJx_"
     },
@@ -860,44 +862,63 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CnXIbc6UOlVn",
-        "outputId": "2907abc8-0156-4a95-a55c-b475968da8a6"
+        "outputId": "eb44de63-eca9-4538-c9b5-19645bfa98b2"
       },
       "source": [
-        "def sort_dict(dictionary, desc=True):\r\n",
+        "def sort_dict(dictionary, desc=True, percent=True):\r\n",
         "  sorted_dict = {}\r\n",
         "  index_list = sorted(list(dictionary.values()), reverse=desc)\r\n",
+        "  sum_index_list = sum(index_list)\r\n",
         "  for index in index_list:\r\n",
         "    value = index\r\n",
-        "    key = get_key(dictionary, value)\r\n",
+        "    key = get_key(dictionary, value)    \r\n",
+        "    if percent:\r\n",
+        "      value = round((index/sum_index_list)*100, 2)\r\n",
+        "    else:\r\n",
+        "      value = index\r\n",
         "    index_tuple = (key, value)\r\n",
         "    sorted_dict[index_tuple[0]] = index_tuple[1]\r\n",
-        "    #print(sorted_dict)\r\n",
         "  return sorted_dict \r\n",
         "\r\n",
-        "android_category_dict_desc = sort_dict(android_category_dict, desc=True)\r\n",
+        "android_category_dict_desc = sort_dict(android_category_dict, desc=True, percent=False)\r\n",
+        "android_category_dict_desc_percent = sort_dict(android_category_dict, desc=True)\r\n",
+        "print(\"Android App Categories\")\r\n",
         "print(android_category_dict_desc)\r\n",
+        "print(android_category_dict_desc_percent)\r\n",
         "print(\"\\n\")\r\n",
-        "android_genre_dict_desc = sort_dict(android_genre_dict, desc=True)\r\n",
+        "android_genre_dict_desc = sort_dict(android_genre_dict, desc=True, percent=False)\r\n",
+        "android_genre_dict_desc_percent = sort_dict(android_genre_dict, desc=True)\r\n",
+        "print(\"Android App Genres\")\r\n",
         "print(android_genre_dict_desc)\r\n",
+        "print(android_genre_dict_desc_percent)\r\n",
         "print(\"\\n\")\r\n",
-        "ios_genre_dict_desc = sort_dict(ios_genre_dict, desc=True)\r\n",
+        "ios_genre_dict_desc = sort_dict(ios_genre_dict, desc=True, percent=False)\r\n",
+        "ios_genre_dict_desc_percent = sort_dict(ios_genre_dict, desc=True)\r\n",
+        "print(\"iOS App Genres\")\r\n",
         "print(ios_genre_dict_desc)\r\n",
+        "print(ios_genre_dict_desc_percent)\r\n",
         "print(\"\\n\")\r\n",
         "\r\n"
       ],
       "id": "CnXIbc6UOlVn",
-      "execution_count": 56,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "Android App Categories\n",
             "{'FAMILY': 1676, 'GAME': 862, 'TOOLS': 750, 'BUSINESS': 407, 'LIFESTYLE': 346, 'PRODUCTIVITY': 345, 'FINANCE': 328, 'MEDICAL': 313, 'SPORTS': 301, 'PERSONALIZATION': 294, 'COMMUNICATION': 287, 'HEALTH_AND_FITNESS': 273, 'PHOTOGRAPHY': 261, 'NEWS_AND_MAGAZINES': 248, 'SOCIAL': 236, 'TRAVEL_AND_LOCAL': 207, 'SHOPPING': 199, 'BOOKS_AND_REFERENCE': 190, 'DATING': 165, 'VIDEO_PLAYERS': 159, 'MAPS_AND_NAVIGATION': 124, 'FOOD_AND_DRINK': 110, 'EDUCATION': 103, 'ENTERTAINMENT': 85, 'LIBRARIES_AND_DEMO': 83, 'AUTO_AND_VEHICLES': 82, 'HOUSE_AND_HOME': 73, 'WEATHER': 71, 'EVENTS': 63, 'PARENTING': 58, 'ART_AND_DESIGN': 57, 'COMICS': 55, 'BEAUTY': 53}\n",
+            "{'FAMILY': 18.91, 'GAME': 9.72, 'TOOLS': 8.46, 'BUSINESS': 4.59, 'LIFESTYLE': 3.9, 'PRODUCTIVITY': 3.89, 'FINANCE': 3.7, 'MEDICAL': 3.53, 'SPORTS': 3.4, 'PERSONALIZATION': 3.32, 'COMMUNICATION': 3.24, 'HEALTH_AND_FITNESS': 3.08, 'PHOTOGRAPHY': 2.94, 'NEWS_AND_MAGAZINES': 2.8, 'SOCIAL': 2.66, 'TRAVEL_AND_LOCAL': 2.34, 'SHOPPING': 2.25, 'BOOKS_AND_REFERENCE': 2.14, 'DATING': 1.86, 'VIDEO_PLAYERS': 1.79, 'MAPS_AND_NAVIGATION': 1.4, 'FOOD_AND_DRINK': 1.24, 'EDUCATION': 1.16, 'ENTERTAINMENT': 0.96, 'LIBRARIES_AND_DEMO': 0.94, 'AUTO_AND_VEHICLES': 0.93, 'HOUSE_AND_HOME': 0.82, 'WEATHER': 0.8, 'EVENTS': 0.71, 'PARENTING': 0.65, 'ART_AND_DESIGN': 0.64, 'COMICS': 0.62, 'BEAUTY': 0.6}\n",
             "\n",
             "\n",
+            "Android App Genres\n",
             "{'Tools': 749, 'Entertainment': 538, 'Education': 474, 'Business': 407, 'Lifestyle': 345, 'Finance': 328, 'Medical': 313, 'Sports': 307, 'Personalization': 294, 'Communication': 287, 'Action': 275, 'Health & Fitness': 273, 'Photography': 261, 'News & Magazines': 248, 'Social': 236, 'Travel & Local': 206, 'Shopping': 199, 'Books & Reference': 190, 'Simulation': 181, 'Dating': 165, 'Arcade': 164, 'Video Players & Editors': 157, 'Casual': 156, 'Maps & Navigation': 124, 'Food & Drink': 110, 'Puzzle': 100, 'Racing': 88, 'Libraries & Demo': 83, 'Auto & Vehicles': 82, 'Strategy': 81, 'House & Home': 73, 'Weather': 71, 'Events': 63, 'Adventure': 60, 'Comics': 54, 'Art & Design': 53, 'Parenting': 44, 'Card': 40, 'Casino': 38, 'Trivia': 37, 'Educational;Education': 35, 'Board': 34, 'Educational': 33, 'Education;Education': 30, 'Word': 23, 'Casual;Pretend Play': 21, 'Music': 18, 'Entertainment;Music & Video': 15, 'Casual;Brain Games': 12, 'Arcade;Action & Adventure': 11, 'Action;Action & Adventure': 9, 'Educational;Pretend Play': 8, 'Entertainment;Brain Games': 7, 'Art & Design;Creativity': 6, 'Education;Pretend Play': 5, 'Education;Creativity': 4, 'Education;Brain Games': 3, 'Casual;Education': 2, 'Comics;Creativity': 1}\n",
+            "{'Tools': 8.45, 'Entertainment': 6.07, 'Education': 5.35, 'Business': 4.59, 'Lifestyle': 3.89, 'Finance': 3.7, 'Medical': 3.53, 'Sports': 3.46, 'Personalization': 3.32, 'Communication': 3.24, 'Action': 3.1, 'Health & Fitness': 3.08, 'Photography': 2.94, 'News & Magazines': 2.8, 'Social': 2.66, 'Travel & Local': 2.32, 'Shopping': 2.25, 'Books & Reference': 2.14, 'Simulation': 2.04, 'Dating': 1.86, 'Arcade': 1.85, 'Video Players & Editors': 1.77, 'Casual': 1.76, 'Maps & Navigation': 1.4, 'Food & Drink': 1.24, 'Puzzle': 1.13, 'Racing': 0.99, 'Libraries & Demo': 0.94, 'Auto & Vehicles': 0.93, 'Strategy': 0.91, 'House & Home': 0.82, 'Weather': 0.8, 'Events': 0.71, 'Adventure': 0.68, 'Comics': 0.61, 'Art & Design': 0.6, 'Parenting': 0.5, 'Card': 0.45, 'Casino': 0.43, 'Trivia': 0.42, 'Educational;Education': 0.39, 'Board': 0.38, 'Educational': 0.37, 'Education;Education': 0.34, 'Word': 0.26, 'Casual;Pretend Play': 0.24, 'Music': 0.2, 'Entertainment;Music & Video': 0.17, 'Casual;Brain Games': 0.14, 'Arcade;Action & Adventure': 0.12, 'Action;Action & Adventure': 0.1, 'Educational;Pretend Play': 0.09, 'Entertainment;Brain Games': 0.08, 'Art & Design;Creativity': 0.07, 'Education;Pretend Play': 0.06, 'Education;Creativity': 0.05, 'Education;Brain Games': 0.03, 'Casual;Education': 0.02, 'Comics;Creativity': 0.01}\n",
             "\n",
             "\n",
+            "iOS App Genres\n",
             "{'Games': 1874, 'Entertainment': 254, 'Photo & Video': 160, 'Education': 118, 'Social Networking': 106, 'Shopping': 84, 'Utilities': 81, 'Sports': 69, 'Music': 66, 'Health & Fitness': 65, 'Productivity': 56, 'Lifestyle': 51, 'News': 43, 'Travel': 40, 'Finance': 36, 'Weather': 28, 'Food & Drink': 26, 'Reference': 18, 'Business': 17, 'Book': 14, 'Navigation': 6, 'Catalogs': 4}\n",
+            "{'Games': 58.16, 'Entertainment': 7.88, 'Photo & Video': 4.97, 'Education': 3.66, 'Social Networking': 3.29, 'Shopping': 2.61, 'Utilities': 2.51, 'Sports': 2.14, 'Music': 2.05, 'Health & Fitness': 2.02, 'Productivity': 1.74, 'Lifestyle': 1.58, 'News': 1.33, 'Travel': 1.24, 'Finance': 1.12, 'Weather': 0.87, 'Food & Drink': 0.81, 'Reference': 0.56, 'Business': 0.53, 'Book': 0.43, 'Navigation': 0.19, 'Catalogs': 0.12}\n",
             "\n",
             "\n"
           ],
@@ -911,24 +932,42 @@
         "id": "FTqbzyf5Um65"
       },
       "source": [
-        "Now we have three sorted dictionaries for further analysis:\r\n",
+        "Now we have six sorted dictionaries for further analysis:\r\n",
         "- android_category_dict_desc\r\n",
+        "- android_category_dict_desc_percent\r\n",
         "- android_genre_dict_desc\r\n",
-        "- ios_genre_dict_desc"
+        "- android_genre_dict_desc_percent\r\n",
+        "- ios_genre_dict_desc\r\n",
+        "- ios_genre_dict_desc_percent"
       ],
       "id": "FTqbzyf5Um65"
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "yoMD6Sf9U5eF"
+        "id": "Fg7tu9S-uDDu"
       },
       "source": [
-        ""
+        "## Analysis\r\n",
+        "The scope of the analysis is as follows:\r\n",
+        "- Only English-named apps.\r\n",
+        "- Only free apps.\r\n",
+        "\r\n",
+        "### Apple Store Analysis\r\n",
+        "- **Most common genre**: A very dominant 51% of the free apps on App Store are 'Games.' The next genre is 'Entertainment' but it is not even close with 7.8%\r\n",
+        "- **Patterns & Trends**: There is a slight bias to art and social networking in the frequency table, but it is not significant given the dominance of games. In other words, there is no indication what kind of game it should be.\r\n",
+        "\r\n",
+        "### Play Store Analysis\r\n",
+        "- **Most common category**: 'Family' is the dominant category at 19%. Games comes next, at just under 10%. \r\n",
+        "- **Most common genre**: Genres are very distributed. At the most frequent end there is 'Tools' at 8%, 'Entertainment' at 6% and 'Education' at 5%.\r\n",
+        "- **Patterns & Trends**: There are a lot of genres and all of them are just a percent or so between each other. \r\n",
+        "\r\n",
+        "### Recommendations\r\n",
+        "The company should build:\r\n",
+        "- A free game with family-friendly themes and PEGI rating.\r\n",
+        "\r\n"
       ],
-      "id": "yoMD6Sf9U5eF",
-      "execution_count": null,
-      "outputs": []
+      "id": "Fg7tu9S-uDDu"
     }
   ]
 }
